--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "node-wit",
-  "version": "3.2.2",
-  "description": "Wit.ai Node.js SDK",
-  "keywords": [
-    "wit",
-    "wit.ai",
-    "bot",
-    "botengine",
-    "bots",
-    "nlp",
-    "automation"
-  ],
+  "name": "mr-roboto",
+  "version": "1.0.0-dev",
+  "description": "JavaScript based wit.ai powered Facebook Messenger Bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": ""
   },
-  "repository": "https://github.com/wit-ai/node-wit",
-  "author": "Julien Odent <julien@wit.ai>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nordichackday/Mr-Roboto.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/nordichackday/Mr-Roboto/issues"
+  },
+  "homepage": "https://github.com/nordichackday/Mr-Roboto#readme",
   "dependencies": {
-    "node-fetch": "^1.5.1",
-    "node-uuid": "^1.4.7"
+    "node-wit": "^3.2.2"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2"
   }
 }
