--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": ""
+    "watch": "node node_modules/nodemon/bin/nodemon.js index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2"
+    "babel-register": "^6.7.2",
+    "nodemon": "^1.9.1"
   }
 }
