--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/nordichackday/Mr-Roboto#readme",
   "dependencies": {
+    "axios": "^0.11.0",
+    "lodash": "^4.11.1",
     "node-wit": "^3.2.2"
   },
   "devDependencies": {
