--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/nordichackday/Mr-Roboto#readme",
   "dependencies": {
     "axios": "^0.11.0",
+    "botkit": "^0.1.1",
     "lodash": "^4.11.1",
     "node-wit": "^3.2.2"
   },
