--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^0.11.0",
     "botkit": "^0.1.1",
+    "express": "^4.13.4",
     "lodash": "^4.11.1",
     "node-wit": "^3.2.2"
   },
